kubernetes/apps/downloads/cross-seed/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cross-seed
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Downloads Service
    gethomepage.dev/name: Cross-Seed
    gethomepage.dev/icon: cross-seed.png
    gethomepage.dev/description: Cross-seeding automation
spec:
  ingressClassName: internal
  rules:
    - host: &host "cross-seed.cloudjur.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cross-seed
                port:
                  type: LoadBalancer
                  annotations:
                    lbipam.cilium.io/ips: 10.10.30.44
                  number: 80
  tls:
    - hosts:
        - *host
